objects/Integration_Err_Log__c.object
<CustomObject>
    <fields>
        <fullName>Err_Code__c</fullName>
        <description>Error code received from the target system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Err_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Err_Message__c</fullName>
        <description>Error Mesage received.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Err_Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Err_Time__c</fullName>
        <description>Error data and time received as a part of error message.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Err_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Err_Type__c</fullName>
        <description>Error Type. Possible Values : 1 - Information 2 - Warning 3 - Error</description>
        <label>Err_Type</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_ID__c</fullName>
        <description>Unique Identifier of Source System</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Link__c</fullName>
        <formula>HYPERLINK(Source_ID__c, "Go To Record" )</formula>
        <label>Source Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Error Source</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source_System</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_ID__c</fullName>
        <description>Unique Identifier of the Target system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target_ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_System__c</fullName>
        <description>Target System of the integration point</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Target_System</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validate_Adjusted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is set to true if the associated opportunity is closed (dead or sold)</description>
        <label>Validate Adjusted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <description>This object will save error from all the Salesforce Integration point.</description>
    <label>Integration_Err_Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ntegration_Err_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration_Err_Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Validate_Adjusted__c</columns>
        <columns>Validated__c</columns>
        <columns>Source_Link__c</columns>
        <columns>Source_ID__c</columns>
        <columns>Target_ID__c</columns>
        <columns>Err_Code__c</columns>
        <columns>Err_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Broker_Express_Non_Validated_Errors</fullName>
        <columns>NAME</columns>
        <columns>Validated__c</columns>
        <columns>Source_Link__c</columns>
        <columns>Source_ID__c</columns>
        <columns>Target_System__c</columns>
        <columns>Err_Code__c</columns>
        <columns>Err_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Validated__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Target_System__c</field>
            <operation>equals</operation>
            <value>Broker Express</value>
        </filters>
        <label>Broker Express Non Validated Errors</label>
    </listViews>
</CustomObject>